; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_task.c_pid_get_task_zombie.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_task.c_pid_get_task_zombie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { i32 }
%struct.pid = type { %struct.task* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.task* @pid_get_task_zombie(i32 %0) #0 {
  %2 = alloca %struct.task*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.pid*, align 8
  %5 = alloca %struct.task*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.pid* @pid_get(i32 %6)
  store %struct.pid* %7, %struct.pid** %4, align 8
  %8 = load %struct.pid*, %struct.pid** %4, align 8
  %9 = icmp eq %struct.pid* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store %struct.task* null, %struct.task** %2, align 8
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.pid*, %struct.pid** %4, align 8
  %13 = getelementptr inbounds %struct.pid, %struct.pid* %12, i32 0, i32 0
  %14 = load %struct.task*, %struct.task** %13, align 8
  store %struct.task* %14, %struct.task** %5, align 8
  %15 = load %struct.task*, %struct.task** %5, align 8
  store %struct.task* %15, %struct.task** %2, align 8
  br label %16

16:                                               ; preds = %11, %10
  %17 = load %struct.task*, %struct.task** %2, align 8
  ret %struct.task* %17
}

declare dso_local %struct.pid* @pid_get(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
